made former page responsive

--- a/former.html
+++ b/former.html
@@ -34,7 +34,7 @@
   </head>
   <body class="text-center former">
     <div class="hero d-flex">
-      <div class="container personal-container">
+      <div class="container personal-container mb-0">
         <div class="row d-block d-md-flex">
           <div class="wrapper col mt-4 d-block d-md-flex">
             <div class="mb-5">
@@ -53,10 +53,12 @@
       </div>
     </div>
     <div class="container">
-      <div class="row projects d-block d-md-flex" id="former">
-        <div class="col-md-6 wrapper mb-0 me-md-5 d-block d-m-flex">
+      <div class="row projects d-block d-md-flex mb-4" id="former">
+        <div class="col-md-6 wrapper mb-5 mb-md--0 me-md-5 d-block d-m-flex">
           <div>
-            <a href="https://www.youtube.com/embed/bRDTdPXhglY" target="_blank"
+            <a
+              href="https://www.youtube.com/watch?v=bRDTdPXhglY"
+              target="_blank"
               ><img
                 src="/images/TML2.jpeg"
                 alt=""
@@ -68,7 +70,7 @@
             <p>e.g. Tomorrowland, Red Nose Day,..</p>
           </div>
         </div>
-        <div class="col-md-6 wrapper me-md-5 d-block d-m-flex">
+        <div class="col-md-6 wrapper mb-5 mb-md--0 ms-md-5 d-block d-m-flex">
           <div>
             <a
               href="https://www.youtube.com/watch?v=u0n5uri1t6Y&t=227s"
@@ -85,8 +87,8 @@
           </div>
         </div>
       </div>
-      <div class="row projects d-block d-md-flex" id="former">
-        <div class="col-md-6 wrapper me-md-5 d-block d-m-flex">
+      <div class="row projects d-block d-md-flex mt-0" id="former">
+        <div class="col-md-6 wrapper mb-5 mb-md--0 me-md-5 d-block d-m-flex">
           <div>
             <a
               href="https://www.youtube.com/watch?v=eTN4wta3axM"
@@ -102,7 +104,7 @@
             <p>e.g. House of Anubis, Kampioen zijn blijft plezant,..</p>
           </div>
         </div>
-        <div class="col-md-6 wrapper me-md-5 d-block d-m-flex">
+        <div class="col-md-6 wrapper mb-5 mb-md--0 ms-md-5 d-block d-m-flex">
           <div>
             <a
               href="https://www.youtube.com/watch?v=EB63IxxiboU"
