cleaned up images

--- a/former.html
+++ b/former.html
@@ -60,7 +60,7 @@
               href="https://www.youtube.com/watch?v=bRDTdPXhglY"
               target="_blank"
               ><img
-                src="/images/TML2.jpeg"
+                src="/images/live-broadcast.jpeg"
                 alt=""
                 class="img-fluid project-image mb-2"
             /></a>
@@ -76,7 +76,7 @@
               href="https://www.youtube.com/watch?v=u0n5uri1t6Y&t=227s"
               target="_blank"
               ><img
-                src="/images/SYTYCD Vivian.jpg"
+                src="/images/studio-show.jpg"
                 alt=""
                 class="img-fluid project-image mb-2"
             /></a>
@@ -94,7 +94,7 @@
               href="https://www.youtube.com/watch?v=eTN4wta3axM"
               target="_blank"
               ><img
-                src="/images/Kampioenen.jpg"
+                src="/images/fiction.jpg"
                 alt=""
                 class="img-fluid project-image mb-2"
             /></a>
@@ -110,7 +110,7 @@
               href="https://www.youtube.com/watch?v=EB63IxxiboU"
               target="_blank"
               ><img
-                src="/images/logohlvc.jpg"
+                src="/images/reality.jpg"
                 alt=""
                 class="img-fluid project-image mb-2"
             /></a>
