--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="col me-md-2 d-none d-md-flex">
           <a href="/former.html" target="_blank" class="img-btn"
             ><img
-              src="images/mediaA.JPG"
+              src="images/former.JPG"
               alt="camera crew"
               class="img-fluid project-image"
           /></a>
@@ -134,8 +134,8 @@
         <div class="col me-md-2 d-none d-md-flex">
           <a href="https://www.meandu.com/" target="_blank"
             ><img
-              src="images/me&u.png"
-              alt="my weather app"
+              src="images/current.png"
+              alt="me&u"
               class="img-fluid project-image"
           /></a>
         </div>
@@ -146,7 +146,7 @@
             href="https://www.shecodes.io/graduates/62429-chloe-smits"
             target="_blank"
             ><img
-              src="images/SheCodes-certificate.png"
+              src="images/future.png"
               alt="SheCodes certificate"
               class="img-fluid project-image"
           /></a>
@@ -191,7 +191,7 @@
         <div class="col me-md-2 d-none d-md-flex">
           <a href="https://www.youtube.com/watch?v=dJpxn7w3I7M" target="_blank"
             ><img
-              src="images/dog.JPG"
+              src="images/lifelong.JPG"
               alt="dog kiss"
               class="img-fluid project-image"
           /></a>
