--- a/about.html
+++ b/about.html
@@ -38,11 +38,7 @@
         <div class="row d-block d-md-flex">
           <div class="wrapper col-md-3 d-flex justify-content-start">
             <div class="mt-md-4 mb-3 me-md-2 d-block d-md-flex">
-              <img
-                src="images/about-A.JPG"
-                alt=""
-                class="img-fluid about-img"
-              />
+              <img src="images/about.JPG" alt="" class="img-fluid about-img" />
             </div>
             <div>
               <a
