ready to submit work page

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container projects">
       <div class="row d-flex" id="former">
-        <div class="col me-md-2 d-none d-md-flex">
+        <div class="col-md-6 me-md-2 d-none d-md-flex">
           <a href="/former.html" target="_blank" class="img-btn"
             ><img
               src="images/former.JPG"
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div class="row d-flex" id="current">
-        <div class="col ms-md-2 mt-md-4">
+        <div class="col-md-6 ms-md-2 mt-md-4">
           <h2><span class="primary-word d-md-none">CURRENT</span></h2>
           <h2>
             <span class="primary-word d-none d-md-inline">CURRENT</span> QA
