added contact page

--- a/former.html
+++ b/former.html
@@ -36,8 +36,8 @@
     <div class="hero d-flex">
       <div class="container personal-container mb-0">
         <div class="row d-block d-md-flex">
-          <div class="wrapper col mt-4 d-block d-md-flex">
-            <div class="mb-5">
+          <div class="wrapper col-md-8 mt-4 d-block d-md-flex">
+            <div class="mb-3">
               <h1>FORMER</h1>
             </div>
 
