--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 <li></li>
                 <li>
                   <span class="primary-word">born &nbsp</span>in MECHELEN
-                  belgium
+                  Belgium
                 </li>
                 <li>
                   <span class="primary-word">based &nbsp</span>in SYDNEY
-                  australia
+                  Australia
                 </li>
               </ul>
             </div>
@@ -71,7 +71,7 @@
                 media producer
               </li>
               <li>
-                <a href="#current" class="primary-word">CURRENT &nbsp</a> qa
+                <a href="#current" class="primary-word">CURRENT &nbsp</a> QA
                 software tester
               </li>
               <li>
