replaced links on index and about to contact page

--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,13 @@
 
             <div class="personal-summary">
               <h3 class="primary-word mt-2">EMAIL</h3>
-              <a href="mailto:chloe.smits@gmail.com" target="_blank">
-                <p>chloe.smits@gmail.com</p>
-              </a>
+
+              <p>
+                <a href="mailto:chloe.smits@gmail.com" target="_blank"
+                  >chloe.smits@gmail.com</a
+                >
+              </p>
+
               <h3 class="primary-word mt-4">PHONE</h3>
               <p>+61 429 794 331</p>
               <h3 class="primary-word mt-4">INSTAGRAM</h3>
