--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             </div>
             <div>
               <a
-                href="mailto:chloe.smits@gmail.com"
+                href="/contact.html"
                 target="_blank"
                 class="primary-btn btn d-none d-md-flex mt-4 mt-md-0"
                 role="button"
