--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div>
               <a
-                href="mailto:chloe.smits@gmail.com"
+                href="/contact.html"
                 target="_blank"
                 class="primary-btn btn d-block d-md-flex mt-4 mt-md-0"
                 role="button"
