--- a/index.html
+++ b/index.html
@@ -33,6 +33,44 @@
     ></script>
   </head>
   <body class="homepage">
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">HOME</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">FORMER</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">CURRENT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">FUTURE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">LIFELONG</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero d-flex">
       <div class="container personal-container">
         <div class="row d-block d-md-flex">
