--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     ></script>
   </head>
   <body class="homepage">
-    <nav class="navbar navbar-expand-lg fixed-top d-flex">
+    <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-fluid">
         <div>
           <a class="navbar-brand" href="#"
