--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-fluid">
         <div>
-          <a class="navbar-brand" href="#"
-            ><i class="fa-solid fa-house" style="color: #ffaaa5"></i
+          <a class="navbar-brand homepage-icon" href="/"
+            ><i class="fa-solid fa-house"></i
           ></a>
           <button
             class="navbar-toggler"
@@ -49,7 +49,7 @@
             aria-label="Toggle navigation"
           >
             <span class="custom-toggler-icon"
-              ><i class="fa-solid fa-bars" style="color: #ffaaa5"></i
+              ><i class="fa-solid fa-bars"></i
             ></span>
           </button>
         </div>
@@ -57,14 +57,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">ABOUT</a>
+              <a class="nav-link" aria-current="page" href="/about.html"
+                >ABOUT</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">FORMER</a>
+              <a class="nav-link" href="/former.html">FORMER</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">CONTACT</a>
+              <a class="nav-link" href="/contact.html">CONTACT</a>
             </li>
           </ul>
         </div>
