added navbar to all pages and enhanced the active link & responsiveness

--- a/about.html
+++ b/about.html
@@ -33,6 +33,48 @@
     ></script>
   </head>
   <body class="about">
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container-fluid">
+        <div>
+          <a class="navbar-brand homepage-icon" href="/"
+            ><i class="fa-solid fa-house"></i
+          ></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="custom-toggler-icon"
+              ><i class="fa-solid fa-bars"></i
+            ></span>
+          </button>
+        </div>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active-link"
+                aria-current="page"
+                href="/about.html"
+                >ABOUT</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/former.html">FORMER</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero d-flex">
       <div class="container personal-container mt-5">
         <div class="row d-block d-md-flex">
