--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-fluid">
         <div>
-          <a class="navbar-brand homepage-icon" href="/"
+          <a class="navbar-brand homepage-icon active-link" href="/"
             ><i class="fa-solid fa-house"></i
           ></a>
           <button
