--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
             </div>
             <div>
               <a
-                href="mailto:chloe.smits@gmail.com"
+                href="/contact.html"
                 target="_blank"
                 class="primary-btn btn d-flex d-md-none mt-4 ms-5 me-5"
                 role="button"
