enhanced former - project links

--- a/former.html
+++ b/former.html
@@ -95,9 +95,7 @@
       <div class="row projects d-block d-md-flex mb-4" id="former">
         <div class="col-md-6 wrapper mb-5 mb-md--0 me-md-5 d-block d-m-flex">
           <div>
-            <a
-              href="https://www.youtube.com/watch?v=bRDTdPXhglY"
-              target="_blank"
+            <a href="https://www.youtube.com/embed/bRDTdPXhglY" target="_blank"
               ><img
                 src="/images/live-broadcast.jpeg"
                 alt=""
@@ -111,9 +109,7 @@
         </div>
         <div class="col-md-6 wrapper mb-5 mb-md--0 ms-md-5 d-block d-m-flex">
           <div>
-            <a
-              href="https://www.youtube.com/watch?v=u0n5uri1t6Y&t=227s"
-              target="_blank"
+            <a href="https://youtu.be/u0n5uri1t6Y" target="_blank"
               ><img
                 src="/images/studio-show.jpg"
                 alt=""
@@ -129,9 +125,7 @@
       <div class="row projects d-block d-md-flex mt-0" id="former">
         <div class="col-md-6 wrapper mb-5 mb-md--0 me-md-5 d-block d-m-flex">
           <div>
-            <a
-              href="https://www.youtube.com/watch?v=eTN4wta3axM"
-              target="_blank"
+            <a href="https://www.youtube.com/embed/eTN4wta3axM" target="_blank"
               ><img
                 src="/images/fiction.jpg"
                 alt=""
@@ -145,9 +139,7 @@
         </div>
         <div class="col-md-6 wrapper mb-5 mb-md--0 ms-md-5 d-block d-m-flex">
           <div>
-            <a
-              href="https://www.youtube.com/watch?v=EB63IxxiboU"
-              target="_blank"
+            <a href="https://www.youtube.com/embed/EB63IxxiboU" target="_blank"
               ><img
                 src="/images/reality.jpg"
                 alt=""
