created footer on index page

--- a/about.html
+++ b/about.html
@@ -78,7 +78,9 @@
     <div class="hero d-flex">
       <div class="container personal-container mt-5">
         <div class="row d-block d-md-flex">
-          <div class="wrapper col-md-3 d-flex justify-content-start">
+          <div
+            class="wrapper col-md-3 d-flex justify-content-start justify-content-lg-between"
+          >
             <div class="mt-md-4 mb-3 me-md-2 d-block d-md-flex">
               <img src="images/about.JPG" alt="" class="img-fluid about-img" />
             </div>
