--- a/index.html
+++ b/index.html
@@ -236,6 +236,17 @@
           /></a>
         </div>
       </div>
+      <footer class="d-flex">
+        <a href="https://www.instagram.com/chloe_smits/" target="_blank"
+          ><i class="fa-brands fa-instagram fa-xl social-link"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/chloesmits/" target="_blank"
+          ><i class="fa-brands fa-linkedin fa-xl social-link"></i
+        ></a>
+        <a href="https://github.com/chloe-shecodes" target="_blank"
+          ><i class="fa-brands fa-github fa-xl social-link"></i
+        ></a>
+      </footer>
     </div>
   </body>
 </html>
