added footer to all pages

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
       </div>
     </nav>
     <div class="hero d-flex">
-      <div class="container personal-container mt-5">
+      <div class="container personal-container">
         <div class="row d-block d-md-flex">
           <div
             class="wrapper col-md-3 d-flex justify-content-start justify-content-lg-between"
@@ -126,5 +126,16 @@
         </div>
       </div>
     </div>
+    <footer class="d-flex">
+      <a href="https://www.instagram.com/chloe_smits/" target="_blank"
+        ><i class="fa-brands fa-instagram fa-xl social-link"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/chloesmits/" target="_blank"
+        ><i class="fa-brands fa-linkedin fa-xl social-link"></i
+      ></a>
+      <a href="https://github.com/chloe-shecodes" target="_blank"
+        ><i class="fa-brands fa-github fa-xl social-link"></i
+      ></a>
+    </footer>
   </body>
 </html>
