--- a/former.html
+++ b/former.html
@@ -92,8 +92,8 @@
       </div>
     </div>
     <div class="container">
-      <div class="row projects d-block d-md-flex mb-4" id="former">
-        <div class="col-md-6 wrapper mb-5 mb-md--0 me-md-5 d-block d-m-flex">
+      <div class="row projects d-block d-md-flex mb-5" id="former">
+        <div class="col-md-6 wrapper mb-5 mb-md-0 me-md-5 d-block d-m-flex">
           <div>
             <a href="https://www.youtube.com/embed/bRDTdPXhglY" target="_blank"
               ><img
@@ -107,7 +107,7 @@
             <p>e.g. Tomorrowland, Red Nose Day,..</p>
           </div>
         </div>
-        <div class="col-md-6 wrapper mb-5 mb-md--0 ms-md-5 d-block d-m-flex">
+        <div class="col-md-6 wrapper mb-5 mb-md-0 ms-md-5 d-block d-m-flex">
           <div>
             <a href="https://youtu.be/u0n5uri1t6Y" target="_blank"
               ><img
@@ -122,8 +122,8 @@
           </div>
         </div>
       </div>
-      <div class="row projects d-block d-md-flex mt-0" id="former">
-        <div class="col-md-6 wrapper mb-5 mb-md--0 me-md-5 d-block d-m-flex">
+      <div class="row projects d-block d-md-flex mt-5" id="former">
+        <div class="col-md-6 wrapper mb-5 mb-md-0 me-md-5 d-block d-m-flex">
           <div>
             <a href="https://www.youtube.com/embed/eTN4wta3axM" target="_blank"
               ><img
@@ -137,7 +137,7 @@
             <p>e.g. House of Anubis, Kampioen zijn blijft plezant,..</p>
           </div>
         </div>
-        <div class="col-md-6 wrapper mb-5 mb-md--0 ms-md-5 d-block d-m-flex">
+        <div class="col-md-6 wrapper mb-5 ms-md-5 d-block d-m-flex">
           <div>
             <a href="https://www.youtube.com/embed/EB63IxxiboU" target="_blank"
               ><img
@@ -153,5 +153,16 @@
         </div>
       </div>
     </div>
+    <footer class="d-flex">
+      <a href="https://www.instagram.com/chloe_smits/" target="_blank"
+        ><i class="fa-brands fa-instagram fa-xl social-link"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/chloesmits/" target="_blank"
+        ><i class="fa-brands fa-linkedin fa-xl social-link"></i
+      ></a>
+      <a href="https://github.com/chloe-shecodes" target="_blank"
+        ><i class="fa-brands fa-github fa-xl social-link"></i
+      ></a>
+    </footer>
   </body>
 </html>
