--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </div>
       </div>
       <div class="row d-flex" id="lifelong">
-        <div class="col ms-md-2 mt--md4">
+        <div class="col ms-md-2 mt-md4">
           <h2><span class="primary-word d-md-none">LIFELONG</span></h2>
           <h2>
             <span class="primary-word d-none d-md-inline">LIFELONG</span> Dog
@@ -236,17 +236,17 @@
           /></a>
         </div>
       </div>
-      <footer class="d-flex">
-        <a href="https://www.instagram.com/chloe_smits/" target="_blank"
-          ><i class="fa-brands fa-instagram fa-xl social-link"></i
-        ></a>
-        <a href="https://www.linkedin.com/in/chloesmits/" target="_blank"
-          ><i class="fa-brands fa-linkedin fa-xl social-link"></i
-        ></a>
-        <a href="https://github.com/chloe-shecodes" target="_blank"
-          ><i class="fa-brands fa-github fa-xl social-link"></i
-        ></a>
-      </footer>
     </div>
+    <footer class="d-flex">
+      <a href="https://www.instagram.com/chloe_smits/" target="_blank"
+        ><i class="fa-brands fa-instagram fa-xl social-link"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/chloesmits/" target="_blank"
+        ><i class="fa-brands fa-linkedin fa-xl social-link"></i
+      ></a>
+      <a href="https://github.com/chloe-shecodes" target="_blank"
+        ><i class="fa-brands fa-github fa-xl social-link"></i
+      ></a>
+    </footer>
   </body>
 </html>
