added content on index page

--- a/former.html
+++ b/former.html
@@ -82,9 +82,12 @@
 
             <div class="personal-summary">
               <p>
-                kort tekstje over hoe ik 15 jaar voor televisie heb gewerkt en
-                dankbaar ben om zeer verscheidene projecten te mogen doen.
-                Hieronder enkele voorbeelden van de verschillende platformen
+                During my career as media producer, I have been fortunate to
+                work in a variety of contexts, including fiction, reality TV,
+                studio shows, and festivals, in which I have acquired different
+                skills. Additionally, I've had the opportunity to work with many
+                talented individuals, which has contributed to my growth and
+                development in the field.
               </p>
             </div>
           </div>
