--- a/index.html
+++ b/index.html
@@ -143,9 +143,12 @@
             Producer
           </h2>
           <p>
-            For 15 years I've worked as a TV / Film and Live broadcast producer.
-            It's been a huge part of my life, learned a lot bjsnskvsljvslv
-            Svdzkvn skvjsv KShxiakfo Fivjlfssg
+            For about 15 years I've had a dynamic career in television, film,
+            and live broadcasting that I have been passionate about. I enjoyed
+            being involved in the creative process from the beginning.
+            Participating in pre-production and seeing how an idea becomes a
+            reality, and working on a project until the final cut in
+            post-production.
           </p>
           <a href="/former.html" target="_blank" class="btn secondary-btn"
             >tell me more</a
@@ -160,8 +163,12 @@
             Software Tester
           </h2>
           <p>
-            Working at me&u, rolled into it, already doing that 1.5 years and
-            learning every day ..... sfsns o;VNSLVSl jldvnsv lSvnf Svsr s ijn
+            During lockdown, I started working in the cutomer service department
+            of a tech startup, called me&u. There, I discovered the QA Software
+            tester position and found it to be a great fit for my personality,
+            as clear communication and high attention to detail are crucial
+            qualities for this role. Every day, I continue to learn and grow in
+            this role and I'm truly developing a passion for the tech world!
           </p>
           <a
             href="https://www.meandu.com/"
@@ -190,22 +197,25 @@
               class="img-fluid project-image"
           /></a>
         </div>
-        <div class="col ms-md-2 mt-md-4">
+        <div class="col ms-md-2 mt-md-3">
           <h2><span class="primary-word d-md-none">FUTURE</span></h2>
           <h2>
             <span class="primary-word d-none d-md-inline">FUTURE</span> Front
             End Developer
           </h2>
           <p>
-            Currently learning how to code bla bla bla nog wat meer tekst hier
-            zetten over wanneer ik ben gestart en wat ik ondertussen heb behaald
-            wat ik nog wil doen
+            My job as a QA tester has sparked my curiosity for coding. After
+            discovering the basic introduction at SheCodes, a company where they
+            aim to empower more women to enter the tech industry, I was inspired
+            to continue. I've completed the PLUS program, and this portfolio
+            website is a final project for the RESPONSIVE course. Now I'm
+            eagerly looking forward to the next course on my list, REACT!
           </p>
           <a
             href="https://www.shecodes.io/graduates/62429-chloe-smits"
             target="_blank"
             class="btn secondary-btn"
-            >learned so far</a
+            >my achievements</a
           >
         </div>
       </div>
@@ -217,14 +227,20 @@
             Lover
           </h2>
           <p>
-            always loved dogs yada yada flnkvfd ldcnv SDVN slsvj kdskjv skdes
-            jKDVs jjnde sdjdfbew
+            I have been a dog lover my whole life. After relocating from Belgium
+            to Sydney and taking a break from the media industry, I decided to
+            pursue my passion for dogs. I worked as a professional dog walker
+            for a year, completed a dog behaviour course, and started dog
+            walking/sitting for many dogs in our neighbourhood. In my current QA
+            role, I'm fortunate to have the flexibility to work from home, which
+            allows me to care for dogs that would otherwise be left alone all
+            day.
           </p>
           <a
             href="https://www.youtube.com/watch?v=dJpxn7w3I7M"
             target="_blank"
             class="btn secondary-btn"
-            >dog days</a
+            >my dog days</a
           >
         </div>
         <div class="col me-md-2 d-none d-md-flex">
