added content on about page

--- a/about.html
+++ b/about.html
@@ -78,9 +78,7 @@
     <div class="hero d-flex">
       <div class="container personal-container">
         <div class="row d-block d-md-flex">
-          <div
-            class="wrapper col-md-3 d-flex justify-content-start justify-content-lg-between"
-          >
+          <div class="wrapper col-md-3 d-flex justify-content-start">
             <div class="mt-md-4 mb-3 me-md-2 d-block d-md-flex">
               <img src="images/about.JPG" alt="" class="img-fluid about-img" />
             </div>
@@ -102,16 +100,23 @@
 
             <div class="personal-summary">
               <p>
-                Hier komt dan een tekstje over mij. Over 15 jaar media
-                producties, dan verhuis naar Sydney, passie honden gevolgd, dan
-                via cutomer service in QA land gerold an zo geinteresseerd
-                geraakt in coding. Wat ik nu aan het studeren ben via SheCodes
-                Hier komt dan een tekstje over mij. Over 15 jaar media
-                producties, dan verhuis naar Sydney, passie honden gevolgd, dan
-                via cutomer service in QA land gerold an zo geinteresseerd
-                geraakt in coding. Wat ik nu aan het studeren ben via SheCodes
-                Over 15 jaar media producties, dan verhuis naar Sydney, passie
-                honden gevolgd, dan via cutomer service in
+                If someone had told me five years ago that I would be living in
+                Sydney, working in tech, and learning how to code in my free
+                time, I would have burst out laughing and thought they had
+                mistaken me for someone else. <br />
+                Originally from Belgium, I grew up in the picturesque town of
+                Mechelen and worked as a media producer for most of my life.
+                Although I had a strong passion for my work in this highly
+                creative industry, it could also be emotionally taxing at times.
+                That's why our move to Sydney presented an opportunity to take a
+                break, reflect, and rediscover myself. Being open to new
+                experiences, I eagerly jumped at the opportunity to explore the
+                world of tech and was pleasantly surprised by how well it suited
+                my personality. My drive to succeed, paired with my strong
+                organizational skills, communication abilities, and attention to
+                detail, have allowed me to thrive in this new field. With that
+                said, I am thrilled to welcome you to my portfolio website, the
+                final project for the responsive course at SheCodes!
               </p>
             </div>
             <div>
