--- a/about.html
+++ b/about.html
@@ -77,9 +77,18 @@
     </nav>
     <div class="hero d-flex">
       <div class="container personal-container">
+        <div class="row d-block d-md-flex mb-1">
+          <div class="col-md-3 d-none d-md-flex"></div>
+          <div class="col-md-9 wrapper d-block d-md-flex">
+            <h3>about me</h3>
+            <h1>Chloé Smits</h1>
+          </div>
+        </div>
         <div class="row d-block d-md-flex">
-          <div class="wrapper col-md-3 d-flex justify-content-start">
-            <div class="mt-md-4 mb-3 me-md-2 d-block d-md-flex">
+          <div
+            class="wrapper col-md-3 d-flex justify-content-start justify-content-lg-between"
+          >
+            <div class="mb-3 me-md-2 d-block d-md-flex">
               <img src="images/about.JPG" alt="" class="img-fluid about-img" />
             </div>
             <div>
@@ -92,12 +101,7 @@
               >
             </div>
           </div>
-          <div class="wrapper col-md-9 mt-4 ms-md-2 d-block d-md-flex">
-            <div class="mb-4 mb-md-0">
-              <h3>about me</h3>
-              <h1>Chloé Smits</h1>
-            </div>
-
+          <div class="wrapper col-md-9 ms-md-2 d-block d-md-flex">
             <div class="personal-summary">
               <p>
                 If someone had told me five years ago that I would be living in
