added content to former page

--- a/former.html
+++ b/former.html
@@ -80,14 +80,17 @@
               <h1>FORMER</h1>
             </div>
 
-            <div class="personal-summary">
+            <div class="personal-summary mb-1">
               <p>
-                During my career as media producer, I have been fortunate to
-                work in a variety of contexts, including fiction, reality TV,
-                studio shows, and festivals, in which I have acquired different
-                skills. Additionally, I've had the opportunity to work with many
-                talented individuals, which has contributed to my growth and
-                development in the field.
+                During my career as media producer, I've had the chance to work
+                in a variety of contexts, including fiction, reality TV, studio
+                shows, and festivals, in which I have acquired different skills.
+                Moreover, collaborating with talented individuals has
+                contributed to my growth and development in the field. Looking
+                back, I am filled with love and gratitude for all the
+                opportunities and places around the world that my career has led
+                me to. Here are just a few highlights of the amazing projects I
+                have been fortunate to be a part of.
               </p>
             </div>
           </div>
