--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
     </nav>
     <div class="hero d-flex">
       <div class="container personal-container">
-        <div class="row d-block d-md-flex mb-1">
+        <div class="row d-block d-md-flex">
           <div class="col-md-3 d-none d-md-flex"></div>
           <div class="col-md-9 wrapper d-block d-md-flex">
             <h3>about me</h3>
@@ -88,7 +88,7 @@
           <div
             class="wrapper col-md-3 d-flex justify-content-start justify-content-lg-between"
           >
-            <div class="mb-3 me-md-2 d-block d-md-flex">
+            <div class="mb-4 d-block d-md-flex">
               <img src="images/about.JPG" alt="" class="img-fluid about-img" />
             </div>
             <div>
