--- a/about.html
+++ b/about.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chloé Smits</title>
+    <meta
+      name="description"
+      content="Chloé is a former media producer, currently a QA Software tester and learning to be a front-end developer in the future, as a student of SheCodes."
+    />
+    <title>Future Front-end developer - Chloé Smits</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -36,7 +40,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-fluid">
         <div>
-          <a class="navbar-brand homepage-icon" href="/"
+          <a class="navbar-brand homepage-icon" href="/" title="Homepage"
             ><i class="fa-solid fa-house"></i
           ></a>
           <button
@@ -61,15 +65,20 @@
                 class="nav-link active-link"
                 aria-current="page"
                 href="/about.html"
+                title="About me"
                 >ABOUT</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/former.html">FORMER</a>
+              <a class="nav-link" href="/former.html" title="My former work"
+                >FORMER</a
+              >
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">CONTACT</a>
+              <a class="nav-link" href="/contact.html" title="Contact me"
+                >CONTACT</a
+              >
             </li>
           </ul>
         </div>
@@ -89,7 +98,11 @@
             class="wrapper col-md-3 d-flex justify-content-start justify-content-lg-between"
           >
             <div class="mb-4 d-block d-md-flex">
-              <img src="images/about.JPG" alt="" class="img-fluid about-img" />
+              <img
+                src="images/about.JPG"
+                alt="picture of Chloé Smits"
+                class="img-fluid about-img"
+              />
             </div>
             <div>
               <a
@@ -97,6 +110,7 @@
                 target="_blank"
                 class="primary-btn btn d-none d-md-flex mt-4 mt-md-0"
                 role="button"
+                title="Contact me"
                 >contact</a
               >
             </div>
@@ -128,6 +142,7 @@
                 href="/contact.html"
                 class="primary-btn btn d-flex d-md-none mt-4 ms-5 me-5"
                 role="button"
+                title="Contact me"
                 >contact</a
               >
             </div>
@@ -135,16 +150,40 @@
         </div>
       </div>
     </div>
-    <footer class="d-flex">
-      <a href="https://www.instagram.com/chloe_smits/" target="_blank"
-        ><i class="fa-brands fa-instagram fa-xl social-link"></i
-      ></a>
-      <a href="https://www.linkedin.com/in/chloesmits/" target="_blank"
-        ><i class="fa-brands fa-linkedin fa-xl social-link"></i
-      ></a>
-      <a href="https://github.com/chloe-shecodes" target="_blank"
-        ><i class="fa-brands fa-github fa-xl social-link"></i
-      ></a>
+    <footer>
+      <div class="d-flex justify-content-center">
+        <a
+          href="https://www.instagram.com/chloe_smits/"
+          target="_blank"
+          title="Instagram profile"
+          ><i class="fa-brands fa-instagram fa-xl social-link"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/chloesmits/"
+          target="_blank"
+          title="LinkedIn profile"
+          ><i class="fa-brands fa-linkedin fa-xl social-link"></i
+        ></a>
+        <a
+          href="https://github.com/chloe-shecodes"
+          target="_blank"
+          title="GitHub profile"
+          ><i class="fa-brands fa-github fa-xl social-link"></i
+        ></a>
+      </div>
+      <div>
+        <p class="text-center mt-4">
+          This project was coded by Chloé Smits, and is
+          <a
+            class="primary-word"
+            href="https://github.com/chloe-shecodes/Responsive-project"
+            target="_blank"
+            title="Project's GitHub page"
+          >
+            open-sourced.
+          </a>
+        </p>
+      </div>
     </footer>
   </body>
 </html>
