--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chloé Smits</title>
+    <meta
+      name="description"
+      content="Chloé is a former media producer, currently a QA Software tester and learning to be a front-end developer in the future, as a student of SheCodes."
+    />
+    <title>Future Front-end developer - Chloé Smits</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -36,7 +40,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-fluid">
         <div>
-          <a class="navbar-brand homepage-icon" href="/"
+          <a class="navbar-brand homepage-icon" href="/" title="Homepage"
             ><i class="fa-solid fa-house"></i
           ></a>
           <button
@@ -57,16 +61,27 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html"
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="/about.html"
+                title="About me"
                 >ABOUT</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/former.html">FORMER</a>
+              <a class="nav-link" href="/former.html" title="My former work"
+                >FORMER</a
+              >
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active-link" href="/contact.html">CONTACT</a>
+              <a
+                class="nav-link active-link"
+                href="/contact.html"
+                title="Contact me"
+                >CONTACT</a
+              >
             </li>
           </ul>
         </div>
@@ -84,7 +99,10 @@
               <h3 class="primary-word mt-2">EMAIL</h3>
 
               <p>
-                <a href="mailto:chloe.smits@gmail.com" target="_blank"
+                <a
+                  href="mailto:chloe.smits@gmail.com"
+                  target="_blank"
+                  title="email address"
                   >chloe.smits@gmail.com</a
                 >
               </p>
@@ -93,13 +111,17 @@
               <p>+61 429 794 331</p>
               <h3 class="primary-word mt-4">INSTAGRAM</h3>
               <p>
-                <a href="https://www.instagram.com/chloe_smits/" target="_blank"
+                <a
+                  href="https://www.instagram.com/chloe_smits/"
+                  target="_blank"
+                  title="Instagram profile - private"
                   >@chloe_smits &nbsp</a
                 >
                 <br />
                 <a
                   href="https://www.instagram.com/c.view_m.ocean/"
                   target="_blank"
+                  title="Instagram profile - public"
                 >
                   @c.view_m.ocean</a
                 >
@@ -109,16 +131,40 @@
         </div>
       </div>
     </div>
-    <footer class="d-flex">
-      <a href="https://www.instagram.com/chloe_smits/" target="_blank"
-        ><i class="fa-brands fa-instagram fa-xl social-link"></i
-      ></a>
-      <a href="https://www.linkedin.com/in/chloesmits/" target="_blank"
-        ><i class="fa-brands fa-linkedin fa-xl social-link"></i
-      ></a>
-      <a href="https://github.com/chloe-shecodes" target="_blank"
-        ><i class="fa-brands fa-github fa-xl social-link"></i
-      ></a>
+    <footer>
+      <div class="d-flex justify-content-center">
+        <a
+          href="https://www.instagram.com/chloe_smits/"
+          target="_blank"
+          title="Instagram profile"
+          ><i class="fa-brands fa-instagram fa-xl social-link"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/chloesmits/"
+          target="_blank"
+          title="LinkedIn profile"
+          ><i class="fa-brands fa-linkedin fa-xl social-link"></i
+        ></a>
+        <a
+          href="https://github.com/chloe-shecodes"
+          target="_blank"
+          title="GitHub profile"
+          ><i class="fa-brands fa-github fa-xl social-link"></i
+        ></a>
+      </div>
+      <div>
+        <p class="text-center mt-4">
+          This project was coded by Chloé Smits, and is
+          <a
+            class="primary-word"
+            href="https://github.com/chloe-shecodes/Responsive-project"
+            target="_blank"
+            title="Project's GitHub page"
+          >
+            open-sourced.
+          </a>
+        </p>
+      </div>
     </footer>
   </body>
 </html>
