--- a/former.html
+++ b/former.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chloé Smits</title>
+    <meta
+      name="description"
+      content="Chloé is a former media producer, currently a QA Software tester and learning to be a front-end developer in the future, as a student of SheCodes."
+    />
+    <title>Future Front-end developer - Chloé Smits</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -36,7 +40,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-fluid">
         <div>
-          <a class="navbar-brand homepage-icon" href="/"
+          <a class="navbar-brand homepage-icon" href="/" title="Homepage"
             ><i class="fa-solid fa-house"></i
           ></a>
           <button
@@ -57,16 +61,27 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html"
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="/about.html"
+                title="About me"
                 >ABOUT</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active-link" href="/former.html">FORMER</a>
+              <a
+                class="nav-link active-link"
+                href="/former.html"
+                title="My former work"
+                >FORMER</a
+              >
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">CONTACT</a>
+              <a class="nav-link" href="/contact.html" title="Contact me"
+                >CONTACT</a
+              >
             </li>
           </ul>
         </div>
@@ -80,7 +95,7 @@
               <h1>FORMER</h1>
             </div>
 
-            <div class="personal-summary mb-1">
+            <div class="personal-summary">
               <p>
                 During my career as media producer, I've had the chance to work
                 in a variety of contexts, including fiction, reality TV, studio
@@ -101,10 +116,13 @@
       <div class="row projects d-block d-md-flex mb-5" id="former">
         <div class="col-md-6 wrapper mb-5 mb-md-0 me-md-5 d-block d-m-flex">
           <div>
-            <a href="https://www.youtube.com/embed/bRDTdPXhglY" target="_blank"
+            <a
+              href="https://www.youtube.com/embed/bRDTdPXhglY"
+              target="_blank"
+              title="Trailer: Unite with Tomorrowland"
               ><img
                 src="/images/live-broadcast.jpeg"
-                alt=""
+                alt="Live broadcast"
                 class="img-fluid project-image mb-2"
             /></a>
           </div>
@@ -115,10 +133,13 @@
         </div>
         <div class="col-md-6 wrapper mb-5 mb-md-0 ms-md-5 d-block d-m-flex">
           <div>
-            <a href="https://youtu.be/u0n5uri1t6Y" target="_blank"
+            <a
+              href="https://youtu.be/u0n5uri1t6Y"
+              target="_blank"
+              title="Clip: So You Think You Can Dance"
               ><img
                 src="/images/studio-show.jpg"
-                alt=""
+                alt="Studio show"
                 class="img-fluid project-image mb-2"
             /></a>
           </div>
@@ -131,10 +152,13 @@
       <div class="row projects d-block d-md-flex mt-0" id="former">
         <div class="col-md-6 wrapper mb-5 mb-md-0 me-md-5 d-block d-m-flex">
           <div>
-            <a href="https://www.youtube.com/embed/eTN4wta3axM" target="_blank"
+            <a
+              href="https://www.youtube.com/embed/eTN4wta3axM"
+              target="_blank"
+              title="Trailer of Belgian movie"
               ><img
                 src="/images/fiction.jpg"
-                alt=""
+                alt="Movie poster"
                 class="img-fluid project-image mb-2"
             /></a>
           </div>
@@ -145,10 +169,13 @@
         </div>
         <div class="col-md-6 wrapper mb-5 ms-md-5 d-block d-m-flex">
           <div>
-            <a href="https://www.youtube.com/embed/EB63IxxiboU" target="_blank"
+            <a
+              href="https://www.youtube.com/embed/EB63IxxiboU"
+              target="_blank"
+              title="News item: The body of Coppens"
               ><img
                 src="/images/reality.jpg"
-                alt=""
+                alt="TV Show logo"
                 class="img-fluid project-image mb-2"
             /></a>
           </div>
@@ -159,16 +186,40 @@
         </div>
       </div>
     </div>
-    <footer class="d-flex">
-      <a href="https://www.instagram.com/chloe_smits/" target="_blank"
-        ><i class="fa-brands fa-instagram fa-xl social-link"></i
-      ></a>
-      <a href="https://www.linkedin.com/in/chloesmits/" target="_blank"
-        ><i class="fa-brands fa-linkedin fa-xl social-link"></i
-      ></a>
-      <a href="https://github.com/chloe-shecodes" target="_blank"
-        ><i class="fa-brands fa-github fa-xl social-link"></i
-      ></a>
+    <footer>
+      <div class="d-flex justify-content-center">
+        <a
+          href="https://www.instagram.com/chloe_smits/"
+          target="_blank"
+          title="Instagram profile"
+          ><i class="fa-brands fa-instagram fa-xl social-link"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/chloesmits/"
+          target="_blank"
+          title="LinkedIn profile"
+          ><i class="fa-brands fa-linkedin fa-xl social-link"></i
+        ></a>
+        <a
+          href="https://github.com/chloe-shecodes"
+          target="_blank"
+          title="GitHub profile"
+          ><i class="fa-brands fa-github fa-xl social-link"></i
+        ></a>
+      </div>
+      <div>
+        <p class="text-center mt-4">
+          This project was coded by Chloé Smits, and is
+          <a
+            class="primary-word"
+            href="https://github.com/chloe-shecodes/Responsive-project"
+            target="_blank"
+            title="Project's GitHub page"
+          >
+            open-sourced.
+          </a>
+        </p>
+      </div>
     </footer>
   </body>
 </html>
