--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chloé Smits</title>
+    <meta
+      name="description"
+      content="Chloé is a former media producer, currently a QA Software tester and learning to be a front-end developer in the future, as a student of SheCodes."
+    />
+    <title>Future Front-end developer - Chloé Smits</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -36,7 +40,10 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-fluid">
         <div>
-          <a class="navbar-brand homepage-icon active-link" href="/"
+          <a
+            class="navbar-brand homepage-icon active-link"
+            href="/"
+            title="Homepage"
             ><i class="fa-solid fa-house"></i
           ></a>
           <button
@@ -57,16 +64,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html"
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="/about.html"
+                title="About me"
                 >ABOUT</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/former.html">FORMER</a>
+              <a class="nav-link" href="/former.html" title="My former work"
+                >FORMER</a
+              >
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">CONTACT</a>
+              <a class="nav-link" href="/contact.html" title="Contact me"
+                >CONTACT</a
+              >
             </li>
           </ul>
         </div>
@@ -99,6 +114,7 @@
                 target="_blank"
                 class="primary-btn btn d-block d-md-flex mt-4 mt-md-0"
                 role="button"
+                title="Contact me"
                 >contact</a
               >
             </div>
@@ -129,7 +145,7 @@
     <div class="container projects">
       <div class="row d-flex" id="former">
         <div class="col-md-6 me-md-2 d-none d-md-flex">
-          <a href="/former.html" target="_blank" class="img-btn"
+          <a href="/former.html" class="img-btn" title="to Former page"
             ><img
               src="images/former.JPG"
               alt="camera crew"
@@ -150,7 +166,11 @@
             reality, and working on a project until the final cut in
             post-production.
           </p>
-          <a href="/former.html" target="_blank" class="btn secondary-btn"
+          <a
+            href="/former.html"
+            target="_blank"
+            class="btn secondary-btn"
+            title="to Former page"
             >tell me more</a
           >
         </div>
@@ -174,11 +194,15 @@
             href="https://www.meandu.com/"
             target="_blank"
             class="btn secondary-btn"
+            title="to me&u website"
             >what is me&u</a
           >
         </div>
         <div class="col me-md-2 d-none d-md-flex">
-          <a href="https://www.meandu.com/" target="_blank"
+          <a
+            href="https://www.meandu.com/"
+            target="_blank"
+            title="to me&u website"
             ><img
               src="images/current.png"
               alt="me&u"
@@ -191,6 +215,7 @@
           <a
             href="https://www.shecodes.io/graduates/62429-chloe-smits"
             target="_blank"
+            title="to SheCodes portfolio"
             ><img
               src="images/future.png"
               alt="SheCodes certificate"
@@ -215,6 +240,7 @@
             href="https://www.shecodes.io/graduates/62429-chloe-smits"
             target="_blank"
             class="btn secondary-btn"
+            title="to SheCodes portfolio"
             >my achievements</a
           >
         </div>
@@ -240,11 +266,15 @@
             href="https://www.youtube.com/watch?v=dJpxn7w3I7M"
             target="_blank"
             class="btn secondary-btn"
+            title="to Dog video"
             >my dog days</a
           >
         </div>
         <div class="col me-md-2 d-none d-md-flex">
-          <a href="https://www.youtube.com/watch?v=dJpxn7w3I7M" target="_blank"
+          <a
+            href="https://www.youtube.com/watch?v=dJpxn7w3I7M"
+            target="_blank"
+            title="to Dog video"
             ><img
               src="images/lifelong.JPG"
               alt="dog kiss"
@@ -253,16 +283,40 @@
         </div>
       </div>
     </div>
-    <footer class="d-flex">
-      <a href="https://www.instagram.com/chloe_smits/" target="_blank"
-        ><i class="fa-brands fa-instagram fa-xl social-link"></i
-      ></a>
-      <a href="https://www.linkedin.com/in/chloesmits/" target="_blank"
-        ><i class="fa-brands fa-linkedin fa-xl social-link"></i
-      ></a>
-      <a href="https://github.com/chloe-shecodes" target="_blank"
-        ><i class="fa-brands fa-github fa-xl social-link"></i
-      ></a>
+    <footer>
+      <div class="d-flex justify-content-center">
+        <a
+          href="https://www.instagram.com/chloe_smits/"
+          target="_blank"
+          title="Instagram profile"
+          ><i class="fa-brands fa-instagram fa-xl social-link"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/chloesmits/"
+          target="_blank"
+          title="LinkedIn profile"
+          ><i class="fa-brands fa-linkedin fa-xl social-link"></i
+        ></a>
+        <a
+          href="https://github.com/chloe-shecodes"
+          target="_blank"
+          title="GitHub profile"
+          ><i class="fa-brands fa-github fa-xl social-link"></i
+        ></a>
+      </div>
+      <div>
+        <p class="text-center mt-4">
+          This project was coded by Chloé Smits, and is
+          <a
+            class="primary-word"
+            href="https://github.com/chloe-shecodes/Responsive-project"
+            target="_blank"
+            title="Project's GitHub page"
+          >
+            open-sourced.
+          </a>
+        </p>
+      </div>
     </footer>
   </body>
 </html>
