--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Chloé is a former media producer, currently a QA Software tester and learning to be a front-end developer in the future, as a student of SheCodes."
+      content="Contact Chloé, a former media producer, currently a QA Software tester and learning to be a front-end developer in the future, as a student of SheCodes."
     />
-    <title>Future Front-end developer - Chloé Smits</title>
+    <title>Contact Chloé Smits</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
