--- a/about.html
+++ b/about.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Chloé is a former media producer, currently a QA Software tester and learning to be a front-end developer in the future, as a student of SheCodes."
+      content="Chloé is a former media producer, but she has recently transitioned into the role of a QA software tester. 
+As an ambitious learner, Chloé is currently enrolled in SheCodes courses to explore various aspects of front-end development and enhance her skills in the field."
     />
-    <title>Future Front-end developer - Chloé Smits</title>
+    <title>About - Chloé Smits</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
