--- a/former.html
+++ b/former.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A few of Chloé's projects, while she worked as a media producer, her former career.  Currently she is a QA Software tester and learning to be a front-end developer in the future, as a student of SheCodes."
+      content="Chloé is a former media producer, but she has recently transitioned into the role of a QA software tester. 
+As an ambitious learner, Chloé is currently enrolled in SheCodes courses to explore various aspects of front-end development and enhance her skills in the field."
     />
     <title>Former career of Chloé Smits</title>
 
