deleted margins on the project rows

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ As an ambitious learner, Chloé is currently enrolled in SheCodes courses to exp
               class="img-fluid project-image"
           /></a>
         </div>
-        <div class="col ms-md-2 mt-md-4">
+        <div class="col ms-md-2">
           <h2><span class="primary-word d-md-none">FORMER</span></h2>
           <h2>
             <span class="primary-word d-none d-md-inline">FORMER</span> Media
@@ -176,7 +176,7 @@ As an ambitious learner, Chloé is currently enrolled in SheCodes courses to exp
         </div>
       </div>
       <div class="row d-flex" id="current">
-        <div class="col-md-6 ms-md-2 mt-md-4">
+        <div class="col-md-6 ms-md-2">
           <h2><span class="primary-word d-md-none">CURRENT</span></h2>
           <h2>
             <span class="primary-word d-none d-md-inline">CURRENT</span> QA
@@ -222,7 +222,7 @@ As an ambitious learner, Chloé is currently enrolled in SheCodes courses to exp
               class="img-fluid project-image"
           /></a>
         </div>
-        <div class="col ms-md-2 mt-md-3">
+        <div class="col ms-md-2">
           <h2><span class="primary-word d-md-none">FUTURE</span></h2>
           <h2>
             <span class="primary-word d-none d-md-inline">FUTURE</span> Front
@@ -246,7 +246,7 @@ As an ambitious learner, Chloé is currently enrolled in SheCodes courses to exp
         </div>
       </div>
       <div class="row d-flex" id="lifelong">
-        <div class="col ms-md-2 mt-md4">
+        <div class="col ms-md-2">
           <h2><span class="primary-word d-md-none">LIFELONG</span></h2>
           <h2>
             <span class="primary-word d-none d-md-inline">LIFELONG</span> Dog
