--- a/index.html
+++ b/index.html
@@ -182,12 +182,13 @@ As an ambitious learner, Chloé is currently enrolled in SheCodes courses to exp
             Software Tester
           </h2>
           <p>
-            During lockdown, I started working in the cutomer service department
-            of a tech startup, called me&u. There, I discovered the QA Software
-            tester position and found it to be a great fit for my personality,
-            as clear communication and high attention to detail are crucial
-            qualities for this role. Every day, I continue to learn and grow in
-            this role and I'm truly developing a passion for the tech world!
+            During lockdown, I started working in the customer service
+            department of a tech startup, called me&u. There, I discovered the
+            QA Software tester position and found it to be a great fit for my
+            personality, as clear communication and high attention to detail are
+            crucial qualities for this role. Every day, I continue to learn and
+            grow in this role and I'm truly developing a passion for the tech
+            world!
           </p>
           <a
             href="https://www.meandu.com/"
