better quality picture for about page

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@ As an ambitious learner, Chloé is currently enrolled in SheCodes courses to exp
           >
             <div class="mb-4 d-block d-md-flex">
               <img
-                src="images/about.JPG"
+                src="images/about-B.jpg"
                 alt="picture of Chloé Smits"
                 class="img-fluid about-img"
               />
